This PR implements an eager mode backend for PyTorch through the torch-mlir framework. This is accomplished by overriding the `__torch_dispatch__` class method on wrapper subclass `TorchMLIRTensor(torch.Tensor)`.
Effectively, this mode works by compiling op by op as the NN is eagerly executed by PyTorch. Entailed in that compilation is building a representation of the op that can be `torch.jit.script`ed, importing using `ModuleBuilder`, and then executing (e.g., with `RefBackendLinalgOnTensorsBackend`). This mode includes a fallback to conventional PyTorch if anything in the torch-mlir compilation process fails (e.g., unsupported op).

Currently, all e2e tests pass execpt for two that involve an upstream PyTorch bug (https://github.com/pytorch/pytorch/issues/74400).

High priority next steps:

1. A compile cache in order to speed up reruns of the same NN.
2. Integration with IREE (though not in this repo).
3. Integration with `torch.distributed`.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -58,6 +58,12 @@ if(TORCH_MLIR_ENABLE_JIT_IR_IMPORTER)
 endif()
 
 ################################################################################
+# Eager mode
+################################################################################
+
+add_subdirectory(torch_mlir/eager_mode)
+
+################################################################################
 # Generate packages and shared library
 # Downstreams typically will not use these, but they are useful for local
 # testing.
