-s add the mnist example which create the module from scratch

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,20 @@ __pycache__
 *.egg-info
 *.whl
 /wheelhouse
+e2e_testing/torchscript/__init__.py
+examples/imagenet-classes.txt
+examples/resnet18_torchscript_import.mlir
+examples/YellowLabradorLooking_new.jpg
+examples/data/MNIST/raw/t10k-images-idx3-ubyte
+examples/data/MNIST/raw/t10k-images-idx3-ubyte.gz
+examples/data/MNIST/raw/t10k-labels-idx1-ubyte
+examples/data/MNIST/raw/t10k-labels-idx1-ubyte.gz
+examples/data/MNIST/raw/train-images-idx3-ubyte
+examples/data/MNIST/raw/train-images-idx3-ubyte.gz
+examples/data/MNIST/raw/train-labels-idx1-ubyte
+examples/data/MNIST/raw/train-labels-idx1-ubyte.gz
+examples/mnist/mnist_cnn_wt.pt
+examples/mnist/mnist_compiled.mlir
+examples/mnist/mnist_torchscript_import.mlir
+examples/mnist/requirements.txt
+examples/mnist/script_mnist.pt
