Split up TorchToLinalg.cpp
This helps keep things organized and also exposes more parallelism to
the build system. It seems though that most of the compile time is
actually spent in the headers though, so the wall time doesn't decrease
as much as I had hoped (and now that the headers are being included
multiple times, the cpu time actually increases a lot, sadly -- will try
to dig into this).

--- a/lib/Conversion/TorchToLinalg/CMakeLists.txt
+++ b/lib/Conversion/TorchToLinalg/CMakeLists.txt
@@ -1,5 +1,15 @@
 add_mlir_conversion_library(TorchMLIRTorchToLinalg
+  DataMovement.cpp
+  IndirectDataMovement.cpp
+  Linear.cpp
+  Pooling.cpp
+  Random.cpp
+  Reduction.cpp
+  TensorConstructors.cpp
+  TensorScalarInterop.cpp
   TorchToLinalg.cpp
+  Uncategorized.cpp
+  Utils.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Conversion/TorchToLinalg
