--- a/external/llvm-external-projects/torch-mlir-dialects/lib/Dialect/TMTensor/IR/CMakeLists.txt
+++ b/external/llvm-external-projects/torch-mlir-dialects/lib/Dialect/TMTensor/IR/CMakeLists.txt
@@ -21,7 +21,7 @@ add_mlir_library(TorchMLIRTMTensorDialect
   MLIRSideEffectInterfaces
   MLIRSupport
   MLIRSCF
-  MLIRStandard
+  MLIRFunc
   MLIRTensor
   MLIRViewLikeInterface
 )
