--- a/lib/Conversion/TorchToSCF/CMakeLists.txt
+++ b/lib/Conversion/TorchToSCF/CMakeLists.txt
@@ -14,7 +14,7 @@ add_mlir_conversion_library(TorchMLIRTorchToSCF
   MLIRIR
   MLIRPass
   MLIRSCF
-  MLIRStandard
+  MLIRFunc
   TorchMLIRTorchDialect
   TorchMLIRTorchConversionDialect
 )
