--- a/externals/llvm-external-projects/torch-mlir-dialects/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/CMakeLists.txt
@@ -50,5 +50,9 @@ include(AddMLIR)
 
 add_subdirectory(include)
 add_subdirectory(lib)
-add_subdirectory(tools)
-add_subdirectory(test)
+if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tools")
+  add_subdirectory(tools)
+endif()
+if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/test")
+  add_subdirectory(test)
+endif()
