Pin the CI to the latest working PyTorch.
I am investigating the breakage.

Also, fix "externals" rename in setup.py and some cases where we weren't
using `requirements.txt` consistently.

Also, fix a case where the packaging script would get confused due to
".." in the path name.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@
 --pre
 
 numpy
-torch
-torchvision
+# TODO: Fix for latest PyTorch.
+torch==1.12.0.dev20220328+cpu
+torchvision==0.13.0.dev20220328+cpu
 
 # Build requirements.
 pybind11
