Add minimal support for Union types.
A recent PyTorch commit made ConstantPad2d call a helper function with a
`Union[int, float]` type annotated. This commit adds minimal support for
representing and dealing with that.
https://github.com/pytorch/pytorch/pull/73287

Changes:
- Adding support for `!torch.union<T1, T2, T3>`/`Torch::UnionType`,
  along with the importer and CAPI code.
- Add support in isValidSubtype for union types.
- Adding a canonicalizer for `torch.derefine` to help simplify some code
  that derefines to a UnionType (this also fixes #664).

There is still more work to do for really supporting UnionType well,
such as canonicalizing UnionType's so that they can be compared with
pointer equality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@
 --pre
 
 numpy
-# TODO: Fix for latest PyTorch.
-torch==1.12.0.dev20220328+cpu
-torchvision==0.13.0.dev20220328+cpu
+torch
+torchvision
 
 # Build requirements.
 pybind11
