Added JIT to MLIR lowering
Lowering to JIT is performed in a way similar to how it's done in the TS LTC backend. After a jit::Graph is constructed, it gets converted to a jit::Function, which is fed into the existing utility to generate an MlirModule in torch-mlir.

--- a/python/torch_mlir/csrc/CMakeLists.txt
+++ b/python/torch_mlir/csrc/CMakeLists.txt
@@ -27,11 +27,16 @@ add_library(torch_mlir_ltc_backend SHARED
   backend/mlir_lowering_context.cpp
   backend/mlir_native_functions.cpp
   backend/mlir_node.cpp
+  backend/mlir_node_lowering.cpp
   backend/RegisterLazy.cpp
 )
 
+add_dependencies(torch_mlir_ltc_backend
+  TorchMLIRJITIRImporter
+)
 target_link_libraries(torch_mlir_ltc_backend
   TorchMLIRAggregateCAPI
+  TorchMLIRJITIRImporter
   ${TORCH_LIBRARIES}
   ${Python3_LIBRARIES}
   torch_python
