--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -66,10 +66,11 @@ jobs:
           TORCH_MLIR_PYTHON_PACKAGE_VERSION="${{ github.event.inputs.python_package_version }}" \
           ./build_tools/build_python_wheels.sh
 
-    # upload the package we just built to the github releases page.
+    # If we were given a release_id, then upload the package we just built
+    # to the github releases page.
     - name: Upload Release Assets (if requested)
-      id: upload-release-assets
       if: github.event.inputs.release_id != ''
+      id: upload-release-assets
       uses: dwenegar/upload-release-assets@v1
       env:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
@@ -79,8 +80,8 @@ jobs:
     # Publishing is necessary to make the release visible to `pip`
     # on the github releases page.
     - name: Publish Release (if requested)
-      id: publish_release
       if: github.event.inputs.release_id != ''
+      id: publish_release
       uses: eregon/publish-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
