Use distinct ccaches
Since they run in distinct jobs, using the same ccache would
cause one job to overwrite the cache of the other.

See https://github.com/ljfitz/torch-mlir/pull/16 for a proof
that this works. The first build takes a long time but ccache
takes over in the dummy commit.

--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -24,6 +24,8 @@ jobs:
       with:
         submodules: 'true'
     - uses: ./.github/actions/setup-build
+      with:
+        cache-key: 'in-tree'
     - name: Build and Test torch-mlir (Assert)
       run: |
         cd $GITHUB_WORKSPACE
@@ -97,6 +99,8 @@ jobs:
       with:
         submodules: 'true'
     - uses: ./.github/actions/setup-build
+      with:
+        cache-key: 'out-of-tree'
     - name: Build LLVM (standalone)
       run: |
         cd $GITHUB_WORKSPACE
