--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -1,6 +1,14 @@
 name: "Setup build environment"
 description: "Setup the build environment. An action so that it can be shared between in-tree/out-of-tree jobs"
 
+inputs:
+  cache-key:
+    description: |
+      Additional string that is used to compute the ccache hash.
+      Different jobs running the action need distinct values for this key,
+      but the content is irrelevant.
+    required: true
+
 runs:
   using: "composite"
   steps:
@@ -25,4 +33,4 @@ runs:
   - name: Ccache for C++ compilation
     uses: hendrikmuhs/ccache-action@4687d037e4d7cf725512d9b819137a3af34d39b3
     with:
-      key: ${{ runner.os }}-clangreleaseasserts-${{ steps.get-submodule-hash.outputs.hash }}
+      key: ${{ runner.os }}-clangreleaseasserts-${{ steps.get-submodule-hash.outputs.hash }}-${{ inputs.cache-key }}
