--- a/.github/workflows/buildManylinux.yml
+++ b/.github/workflows/buildManylinux.yml
@@ -47,7 +47,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
         python -m pip install wheel
-        ./build_tools/python_deploy/install_macos_deps.sh
+        sudo ./build_tools/python_deploy/install_macos_deps.sh
         python_versions="3.9 3.10" ./build_tools/python_deploy/build_macos_packages.sh
 
 
