--- a/.github/workflows/oneshotSnapshotPackage.yml
+++ b/.github/workflows/oneshotSnapshotPackage.yml
@@ -55,10 +55,10 @@ jobs:
           ref: "${{ env.tag_name }}"
           inputs: '{"release_id": "", "python_package_version": "${{ env.package_version }}"}'
 
-      - name: "Invoke workflow :: Manylinux Build"
+      - name: "Invoke workflow :: Release Build"
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: Manylinux Build
+          workflow: Release Build
           token: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
           ref: "${{ env.tag_name }}"
           inputs: '{"release_id": "${{ steps.create_release.outputs.id }}", "python_package_version": "${{ env.package_version }}"}'
