[Bazel][Fix] Add missing dependency

--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -417,6 +417,7 @@ cc_library(
         ":TorchMLIRTorchBackendTypeConversion",
         ":TorchMLIRTorchConversionDialect",
         ":TorchMLIRConversionPassesIncGen",
+        ":TorchMLIRConversionUtils",
         "@llvm-project//mlir:Dialect"
     ]
 )
