Add tracing suport to `torch_mlir.compile`.
This also has a fix for the adjustment of types of TupleConstruct
inputs, which I found when using this new functionality on a model.

Some scenarios in tracing create situations where the output of
TupleConstruct has a more refined type than the inputs.

This introduces a helper `adjustStaticInformationForValues` which
subsumes the `derefineValues` helper and the tensor static information
adjustment we were doing.

--- a/lib/CAPI/CMakeLists.txt
+++ b/lib/CAPI/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_mlir_public_c_api_library(TorchMLIRCAPI
   Dialects.cpp
   Registration.cpp
+  TorchOps.cpp
   TorchTypes.cpp
 
   ADDITIONAL_HEADER_DIRS
