Get MLIR backend more consistent with TS backend
- Remove LazyNativeFunctions::_unsafe_view from autogen

- Blacklist ops to make JIT graph more like output of TS backend

- Print graph when SSA value has mismatch of types and results

- Remove normalize_index from LazyShapeInference

- Fix seeds for LTC example models

--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -14,6 +14,9 @@ blacklist:
 - where
 - copy_
 
+# Disabled for consistency with TS backend
+- rsub
+
 # List of supported ops that we don't want to do the full codegen for
 # primarily view ops
 supported:
@@ -29,11 +32,15 @@ supported:
 - expand
 - fill_.Scalar
 - permute
+- select.int
+- slice.Tensor
 - squeeze
 - squeeze.dim
 - t
+- transpose.int
 - unsqueeze
 - view
+- _unsafe_view
 
 additional_ops:
 # Additional ops to support that are not supported by Torch-MLIR explicitly
