--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -71,6 +71,8 @@ supported:
 - pixel_shuffle
 - pixel_unshuffle
 - select_backward
+- slice_backward
+- diagonal_backward
 - _trilinear
 - linalg_inv_ex
 - linalg_pinv.atol_rtol_tensor
